--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,45 @@
     border-style: solid;
     border-color: transparent;
     }
+.pr {
+    text-decoration:none;
+    font-weight: 600;
+    font-size: 20px;
+    color:#000000;
+    padding-top:15px;
+    padding-bottom:15px;
+    padding-left:40px;
+    padding-right:40px;
+    background-color: transparent;
+    border-width: 3px;
+    border-style: solid;
+    border-color: transparent;
+    }
+.es {
+    text-decoration:none;
+    font-weight: 600;
+    font-size: 20px;
+    color:#000000;
+    padding-top:15px;
+    padding-bottom:15px;
+    padding-left:40px;
+    padding-right:40px;
+    background-color: transparent;
+    border-width: 3px;
+    border-style: solid;
+    border-color: transparent;
+    }
+.qs {
+    text-decoration:none;
+    font-weight: 600;
+    font-size: 20px;
+    color:#000000;
+    padding-top:15px;
+    padding-bottom:15px;
+    padding-left:40px;
+    padding-right:40px;
+    background-color: transparent;
+    border-width: 3px;
+    border-style: solid;
+    border-color: transparent;
+    }
